save table interaction state #3685. fix for column filter inputs overflow

--- a/core/src/main/web/app/styles/datatables.scss
+++ b/core/src/main/web/app/styles/datatables.scss
@@ -40,6 +40,7 @@ table.dataTable {
     .filterRow th {
       border-top-width: 0px;
       padding-left: 5px;
+      overflow-x: initial;
     }
   }
 }
